# copilot-core-gadt

./: LICENSE.txt  copilot-core.cabal
src/Language/Copilot/: Core.hs
src/Language/Copilot/Core/: HeteroMap.hs  Interpret.hs  PrettyPrint.hs  Type.hs
